Version 1.3.10
 Fixed:
  - cppcheck: Uninitialized struct member: item.provider_id;

Version 1.3.9
 Fixed:
  - Fixed build with Qt >= 5.11 [BUG-125];
  - Error: wrong or broken XML data. Try again later. [BUG-132]

 Added:
  - Custom virtual desktop resolution size [BUG-131];

Version 1.3.8
 Updated:
  - gui_sudo missing in Ubuntu 18.04 [BUG-120];

 Fixed:
  - winetricks: Proxy settings are used even if proxy type set to 'none';

Version 1.3.7
 Updated:
  - Wine stock icons to be organised through Q4Wine [BUG-117];
  - Add gnome-terminal into terminal detection logic [BUG-118];
 Added:
  - French translation (thx 2 seigneurfuo);

Version 1.3.6
 Updated:
  - Added indication of applications which was installed through winetricks [BUG-106][BUG-111];
  - Default Wine Desktop Integartion path settings for new prefixes [BUG-106];
  - Added option to run custom scripts with fake drive settings after creation of fake drive [BUG-106];
  - Qt5 build enabled by default;
  - Taiwan translation;
  - Russian translation;
  - Ukrainian translation;
  - Spanish translation;
  - Czech translation;
  - Bind Plus and Minus keys for Program tab for +\- zoom respectively [BUG-112];
  - Bind Plus and Minus keys for Config tab for +\- zoom respectively [BUG-112];
  - Allow to change Config and Program Icon sizes independently  [BUG-112];
 Documented:
  - q4wine prevents user from running winecfg from KRunner even after uninstalling [BUG-98];
 Fixed:
  - Static code analysis: errors and warnings [BUG-116];
  - Error: wrong or broken XML data. Try again later. [BUG-114];

Version 1.3.5
 Updated:
  - Italian translation;
  - Ukrainian translation;
  - Russian translation;
 Fixed:
  - Removed extra Doxygen files to reduce artifact size;

Version 1.3.4
 Added:
  - Add WINE env var to console environment [BUG-91];
 Fixed:
  - Icons are not loaded properly with Qt 5.7.x;
  - Console launch environment uses dead setting fields [BUG-90];